--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.geso.dbinspector</groupId>
 	<artifactId>dbinspector</artifactId>
-	<version>0.0.9-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<name>dbinspector</name>
 	<description>dbinspector</description>
 	<url>https://github.com/tokuhirom/dbinspector.java/</url>
@@ -19,7 +18,7 @@
 		<url>https://github.com/tokuhirom/dbinspector.java</url>
 		<connection>scm:git:git://github.com/tokuhirom/dbinspector.java.git</connection>
 		<developerConnection>scm:git:git@github.com:tokuhirom/dbinspector.java.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>dbinspector-0.1.0</tag>
 	</scm>
 
 	<distributionManagement>
